update to archrules plugin 0.1.+ (#9)
compile rules on java 8 for greater compatibility