@@ -5,6 +5,7 @@ import com.tngtech.archunit.lang.ArchRule;
 import com.tngtech.archunit.lang.Priority;
 import com.tngtech.archunit.lang.syntax.ArchRuleDefinition;
 
+import java.util.Collections;
 import java.util.Map;
 
 import static com.tngtech.archunit.core.domain.JavaAccess.Predicates.target;
@@ -28,6 +29,6 @@ public class DeprecationRule implements ArchRulesService {
 
     @Override
     public Map<String, ArchRule> getRules() {
-        return Map.of("deprecated", deprecationRule);
+        return Collections.singletonMap("deprecated", deprecationRule);
     }
 }
